Utworzenie bazy danych

--- a/PortalRandkowy.API/appsettings.json
+++ b/PortalRandkowy.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings" :{
+    "DefaultConnection": "DataSource = PortalRandkowy.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
