--- a/PortalRandkowy.SPA/angular.json
+++ b/PortalRandkowy.SPA/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "PortalRandkowy-SAP": {
+    "PortalRandkowy-SPA": {
       "projectType": "application",
       "schematics": {},
       "root": "",
