Autoryzacja i dostep API do danych

--- a/PortalRandkowy.API/appsettings.json
+++ b/PortalRandkowy.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token": "nasz sekretny klucz"
+    "Token": "sekretny klucz - jakis dlugi ciag przypadkowych znakow"
   },
   "ConnectionStrings" :{
     "DefaultConnection": "DataSource = PortalRandkowy.db"
